// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItemList renders with items 1`] = `
<DocumentFragment>
  <section
    id="item-list"
  >
    <ul>
      <li>
        <a
          class="link"
          href="/item/undefined"
        >
          <h4 />
        </a>
      </li>
      <li>
        <a
          class="link"
          href="/item/undefined"
        >
          <h4 />
        </a>
      </li>
      <li>
        <a
          class="link"
          href="/item/undefined"
        >
          <h4 />
        </a>
      </li>
    </ul>
  </section>
</DocumentFragment>
`;

exports[`ItemList renders without items 1`] = `
<DocumentFragment>
  <section
    id="item-list"
  >
    <ul />
  </section>
</DocumentFragment>
`;
